basic header, footer and main section added

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 5mm 20mm;
+  background-color: darkgray;
 }
 
 header {
@@ -50,6 +51,49 @@ header {
   display: flex;
   width: 100mm;
   justify-content: space-around;
+}
+
+#landingBackgroundImage {
+  max-width: 100%;
+  opacity: 0.25;
+}
+
+#welcomeText {
+  position: absolute;
+  max-width: 50vw;
+  left: 25vw;
+  top: 80mm;
+  font-size: 10mm;
+  font-weight: bolder;
+  color: black;
+}
+
+#startMealBuilder {
+  position: absolute;
+  top: 70mm;
+  width: 45vw;
+  left: 26vw;
+  height: 15mm;
+  font-size: 10mm;
+  font-style: italic;
+  color: #b8f8ff;
+  background-color: #231d86;
+  border-radius: 5mm;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
+  height: 101mm;
+  background-color: rgba(86, 109, 129, 0.57);
+  bottom: 100mm;
+  position: relative;
+}
+
+.socialMediaIcon {
+  max-height: 15mm;
 }
 
 /*# sourceMappingURL=public/style/main.css.map */
