--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,5 +1,5 @@
 body {
-  margin: 5mm 20mm;
+  margin: 4mm 4mm;
   background-color: darkgray;
 }
 
@@ -124,9 +124,10 @@ footer {
   background-color: lightgrey;
   line-height: 1mm;
   border-radius: 2mm;
-  padding: 2mm;
   text-align: center;
-  width: 20mm;
+  width: 100%;
+  height: 5vh;
+  margin: 0 0 5px 0;
   font-family: monospace;
 }
 
@@ -135,6 +136,15 @@ footer {
   -webkit-box-shadow: 0 0 8px #88D5E9;
   box-shadow: 0 0 8px #88D5E9;
   border: 1px solid #88D5E9;
+}
+
+#knownCaloriesForm {
+  margin: 2vh 0;
+}
+
+#knownCaloriesForm legend {
+  text-align: center;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=public/style/main.css.map */
