--- a/sass/main.scss
+++ b/sass/main.scss
@@ -177,6 +177,17 @@ footer {
     text-align: center;
     font-weight: bold;
 }
+
+#knownCaloriesForm button {
+    width: 100%;
+    border-radius: 2mm;
+    border: none;
+    height: 5vh;
+    background-color: lightskyblue;
+    font-weight: 900;
+    font-size: 1em;
+    color: whitesmoke;
+}
 //=====================================
 // End Calorie Form
 //=====================================
